// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#SideBar render 1`] = `
<React.Fragment>
  <div>
    SideBar
  </div>
  <button
    onClick={[Function]}
    type="button"
  >
    My booking
  </button>
  <[object Object] />
</React.Fragment>
`;

exports[`#SideBar render with modal 1`] = `
<React.Fragment>
  <div>
    SideBar
  </div>
  <button
    onClick={[Function]}
    type="button"
  >
    My booking
  </button>
  <[object Object] />
  <Modal
    onClose={[Function]}
  >
    <Login
      onOpenMyBooking={[Function]}
      onOpenRegister={[Function]}
      onOpenSignIn={[Function]}
      open="myBooking"
    />
  </Modal>
</React.Fragment>
`;
